10_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webservers
spec:
  rules:
  - host: nginx.192.168.99.100.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
  - host: apache.192.168.99.100.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: apache
          servicePort: 80
